[package]
name = "license-me"
version = "0.1.0"
edition = "2021"
authors = ["Oliver Schantz <frequency403@gmail.com>"]
description = "A little CLI-program to license your unlicensed git-repositorys on your machine - and create a dummy readme if it not exists!"
readme = "README.md"
categories = ["commandline-utilities", "github", "git", "licenses"]
keywords = ["cli", "cli-licenser", "git-licenser", "licenser", "git", "github"]
license = "MIT"
homepage = "https://github.com/frequency403/license-me"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
sysinfo = "0.26.4"
indicatif = "0.17.1"
chrono = "0.4.22"
ansi_term = "0.12.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug=true
lto=true